org.mmisw.ontmd: Ontology Metadata Manager and Voc2RDF
Carlos Rueda  -  http://marinemetadata.org

ChangeLog

2009-03-20
	- some documentation updates.
	

2009-03-19
	- Completed fix of issue #45: "include URIs for Topic in the ontmd Topic URI -- 
	  Review operation was removing the topic URI field value.
	  1.0.8.beta (20090319092940)
	  
	- Fixed Issue 109: "second review not asked after further changes"
	  Merged the "Review" and "Upload" actions into a single "Review and Upload" button. 
	  Complementary to this, the dialog for the successful review result now includes a button "Upload".
	  The user can either proceed with the upload operation or close the review dialog and continue 
	  editing the metadata.
	  
	  
	- Now, dynamic load of supporting vocabularies to drive drop-down menus. This way, the lists
	  are always displayed with the most recent contents. Previously, these lists were only
	  prepared at deployment time!
	  Also, the options are sorted by name (ignoring case).
	  Also, add sugestedBox to faciliate selection of option from the listBox.
	  1.0.9.beta (20090319164948)
	  
	 
2009-03-18
	- Issue #45: "include URIs for Topic in the ontmd Topic URI field"  -- 1.0.8.beta (20090318234714)
	  See OndMdServiceImpl, MetadataGroupPanel, Option, MdUtil, MdHelper.
	  - OmvMmi.shortNameUri is now associated with Omv.acronym 
	  - OndMdServiceImpl.prepareOntologyInfo(File file, OntologyInfo ontologyInfo): 
	  	if OmvMmi.shortNameUri is part of the list of attributes, then it also assigns OmvMmi.shortNameUri
	  - MetadataGroupPanel: various adjustments.
	    
	- New version.properties as the single point to define the version for this application
	  (both the back-end services and the front-ends). build.xml translates this to the 
	  application via the web.xml (which is read by Config). Also, a "build number", which 
	  is a timestamp, is used for the full version. An AppInfo object is used to share the