@@ -53,6 +53,7 @@
 		<url-pattern>/ontmdService</url-pattern>
 	</servlet-mapping>
 
+	<!-- 
 	<servlet>
 		<servlet-name>voc2rdfService</servlet-name>
 		<servlet-class>org.mmisw.ontmd.gwt.server.voc2rdf.Voc2RdfServiceImpl</servlet-class>
@@ -103,6 +104,7 @@
 		<servlet-name>voc2rdfService</servlet-name>
 		<url-pattern>/voc2rdfService</url-pattern>
 	</servlet-mapping>
+	-->
 
 	<servlet>
 		<servlet-name>upload</servlet-name>
