@@ -23,6 +23,6 @@
 	
 	<servlet path="/upload" class="org.mmisw.ontmd.gwt.server.UploadServlet"/>
 	
-	<servlet path="/voc2rdfService" class="org.mmisw.ontmd.gwt.server.voc2rdf.Voc2RdfServiceImpl"/>
+	<!-- servlet path="/voc2rdfService" class="org.mmisw.ontmd.gwt.server.voc2rdf.Voc2RdfServiceImpl"/ -->
 	
 </module>
