@@ -2,6 +2,8 @@ package org.mmisw.ontmd.gwt.client.rpc;
 
 import java.util.Map;
 
+import org.mmisw.ontmd.gwt.client.voc2rdf.rpc.ConversionResult;
+import org.mmisw.ontmd.gwt.client.voc2rdf.rpc.Voc2RdfBaseInfo;
 import org.mmisw.ontmd.gwt.client.vocabulary.AttrDef;
 
 import com.google.gwt.user.client.rpc.RemoteService;
@@ -62,5 +64,19 @@ public interface OntMdService extends RemoteService {
 	 * Uploads a reviewed model to the MMI Registry.
 	 */
 	UploadResult upload(ReviewResult reviewResult, LoginResult loginResult);
+	
+	
+	///////////////////////////////////////////////////////////////////////
+	// Voc2RDF
+	
+	/**
+	 * Gets basic application info.
+	 */
+	AppInfo getVoc2RdfAppInfo();
+	
+	Voc2RdfBaseInfo getVoc2RdfBaseInfo();
+	
+	ConversionResult convert2Rdf(Map<String,String> values);
+	
 	
 }
