@@ -5,14 +5,10 @@ import java.util.Map;
 import org.mmisw.ontmd.gwt.client.Main;
 import org.mmisw.ontmd.gwt.client.rpc.AppInfo;
 import org.mmisw.ontmd.gwt.client.voc2rdf.rpc.Voc2RdfBaseInfo;
-import org.mmisw.ontmd.gwt.client.voc2rdf.rpc.Voc2RdfService;
-import org.mmisw.ontmd.gwt.client.voc2rdf.rpc.Voc2RdfServiceAsync;
 
-import com.google.gwt.core.client.GWT;
 import com.google.gwt.user.client.DOM;
 import com.google.gwt.user.client.Element;
 import com.google.gwt.user.client.rpc.AsyncCallback;
-import com.google.gwt.user.client.rpc.ServiceDefTarget;
 import com.google.gwt.user.client.ui.HTML;
 import com.google.gwt.user.client.ui.RootPanel;
 
@@ -26,30 +22,30 @@ public class Voc2Rdf {
 
 	static String baseUrl;
 
-	static AppInfo appInfo;
-	static Voc2RdfBaseInfo baseInfo;
+	public static AppInfo appInfo = new AppInfo("MMI Voc2RDF");
+	public static Voc2RdfBaseInfo baseInfo;
 
-	static Voc2RdfServiceAsync voc2rdfService;
+//	static Voc2RdfServiceAsync voc2rdfService;
 
 
-	public static Voc2RdfServiceAsync getVoc2RdfService() {
-		if ( voc2rdfService == null ) {
-			String moduleRelativeURL = GWT.getModuleBaseURL() + "voc2rdfService";
-			Main.log("Getting " + moduleRelativeURL + " ...");
-			voc2rdfService = (Voc2RdfServiceAsync) GWT.create(Voc2RdfService.class);
-			ServiceDefTarget endpoint = (ServiceDefTarget) voc2rdfService;
-			endpoint.setServiceEntryPoint(moduleRelativeURL);
-			Main.log("   voc2rdfService " + voc2rdfService);
-		}
-		return voc2rdfService;
-	}
+//	private static Voc2RdfServiceAsync getVoc2RdfService() {
+//		if ( voc2rdfService == null ) {
+//			String moduleRelativeURL = GWT.getModuleBaseURL() + "voc2rdfService";
+//			Main.log("Getting " + moduleRelativeURL + " ...");
+//			voc2rdfService = (Voc2RdfServiceAsync) GWT.create(Voc2RdfService.class);
+//			ServiceDefTarget endpoint = (ServiceDefTarget) voc2rdfService;
+//			endpoint.setServiceEntryPoint(moduleRelativeURL);
+//			Main.log("   voc2rdfService " + voc2rdfService);
+//		}
+//		return voc2rdfService;
+//	}
 
 	private Main main;
 
 
 	public void launch(Main main, Map<String, String> params) {
 		this.main = main;
-		getVoc2RdfService();
+//		getVoc2RdfService();
 		getAppInfo(params);
 	}
 
@@ -62,13 +58,15 @@ public class Voc2Rdf {
 
 			public void onSuccess(AppInfo aInfo) {
 				appInfo = aInfo;
+				Main.log("Getting application info: " +appInfo);
 				main.footer = appInfo.toString();
 				getPrimaryConcepts(params);
 			}
 		};
 
 		Main.log("Getting application info ...");
-		voc2rdfService.getAppInfo(callback);
+//		voc2rdfService.getAppInfo(callback);
+		Main.ontmdService.getVoc2RdfAppInfo(callback);
 	}
 
 	private void getPrimaryConcepts(final Map<String, String> params) {
@@ -87,7 +85,8 @@ public class Voc2Rdf {
 		};
 
 		Main.log("Getting base info ...");
-		voc2rdfService.getBaseInfo(callback);
+//		voc2rdfService.getBaseInfo(callback);
+		Main.ontmdService.getVoc2RdfBaseInfo(callback);
 	}
 
 
