@@ -3,63 +3,39 @@ package org.mmisw.ontmd.gwt.server.voc2rdf;
 import java.util.Map;
 import java.util.Map.Entry;
 
-import javax.servlet.ServletException;
-
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.mmisw.ontmd.gwt.client.rpc.AppInfo;
 import org.mmisw.ontmd.gwt.client.voc2rdf.rpc.ConversionResult;
 import org.mmisw.ontmd.gwt.client.voc2rdf.rpc.Voc2RdfBaseInfo;
-import org.mmisw.ontmd.gwt.client.voc2rdf.rpc.Voc2RdfService;
 import org.mmisw.ontmd.gwt.server.Config;
 import org.mmisw.ontmd.gwt.server.MdHelper;
-
-import com.google.gwt.user.server.rpc.RemoteServiceServlet;
 
 
 
 /**
- * Implementation of Voc2RdfService. 
- * 
- * @deprecated Now, this service is provided through the main ontmd service.
+ * The main Voc2Rdf back-end operations. 
  * 
  * @author Carlos Rueda
  * @version $Id$
  */
-@Deprecated
-public class Voc2RdfServiceImpl extends RemoteServiceServlet implements Voc2RdfService {
-	private static final long serialVersionUID = 1L;
+public class Voc2RdfImpl  {
 
-	
-	private final Log log = LogFactory.getLog(Voc2RdfServiceImpl.class);
+	private final Log log = LogFactory.getLog(Voc2RdfImpl.class);
 	
 	private final AppInfo appInfo = new AppInfo("MMI Voc2RDF");
 	
 	private Voc2RdfBaseInfo baseInfo = null;
 	
 	
-	public void init() throws ServletException {
-		super.init();
+	public Voc2RdfImpl() {
 		log.info("initializing " +appInfo.getAppName()+ "...");
-		try {
-			Config.getInstance().init(getServletConfig(), null);
+		appInfo.setVersion(
+				Config.Prop.VERSION.getValue()+ " (" +
+				Config.Prop.BUILD.getValue()  + ")"
+		);
 
-			appInfo.setVersion(
-					Config.Prop.VERSION.getValue()+ " (" +
-						Config.Prop.BUILD.getValue()  + ")"
-			);
-					
-			log.info(appInfo.toString());
-		}
-		catch (Exception ex) {
-			log.error("Cannot initialize: " +ex.getMessage(), ex);
-			throw new ServletException("Cannot initialize", ex);
-		}
-	}
-	
-	public void destroy() {
-		super.destroy();
-		log.info(appInfo+ ": destroy called.\n\n");
+		log.info(appInfo.toString());
 	}
 
 	public AppInfo getAppInfo() {
