@@ -5,4 +5,4 @@
 ############################################################################
 
 # Version
-ontmd.app.version=1.0.9.beta
+ontmd.app.version=1.1.0.beta
